177 split elasticsearch dependencies into a separate package for licensing purposes (#178)
* fix method to make it work with JDK 8; removed class

* moving classes to separate project

* making code work with JDK 8

* remove main, fix code